Updated btn color,added cta text-shadow

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                     <div class="card-footer">
                         <div class="card-footer-buttons">
-                            <button class="card-btn btn-link">BUY</button>
+                            <button class="card-btn btn-link btn-buy">BUY</button>
                             <button class="card-btn btn-link btn-add-cart">Add to Cart</button>
                         </div>
                         <div class="card-footer-icons">
@@ -94,7 +94,7 @@
                     </div>
                     <div class="card-footer">
                         <div class="card-footer-buttons">
-                            <button class="card-btn btn-link">BUY</button>
+                            <button class="card-btn btn-link btn-buy">BUY</button>
                             <button class="card-btn btn-link btn-add-cart">Add to Cart</button>
                         </div>
                         <div class="card-footer-icons">
@@ -117,7 +117,7 @@
                     </div>
                     <div class="card-footer">
                         <div class="card-footer-buttons">
-                            <button class="card-btn btn-link">BUY</button>
+                            <button class="card-btn btn-link btn-buy">BUY</button>
                             <button class="card-btn btn-link btn-add-cart">Add to Cart</button>
                         </div>
                         <div class="card-footer-icons">
