Updated featured items card

--- a/index.html
+++ b/index.html
@@ -62,71 +62,29 @@
             </section>
             <section class="featured">
                 <div class="card-basic card-ribbon border-2" badge-text="On Sale">
-                    <img src="https://picsum.photos/400/300" class="card-image" alt="Tanjiro Kamado Pic" />
-                    <div class="card-header">
+                    <img src="https://picsum.photos/400/300" class="card-image" alt="card-image" />
+                    <div class="card-header card-pull-text-over-media">
                         <div class="card-title">
-                            <div class="card-title-header">Item</div>
-                            <div class="card-title-author">Description</div>
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                        <div class="card-footer-buttons">
-                            <button class="card-btn btn-link btn-buy">BUY</button>
-                            <button class="card-btn btn-link btn-add-cart">Add to Cart</button>
-                        </div>
-                        <div class="card-footer-icons">
-                            <button class="btn btn-icon btn-transparent fa fa-heart-o ">
-                            </button>
-                            <button class="btn btn-icon btn-transparent fa fa-share-alt">
-                            </button>
-                            <button class=" btn btn-icon btn-transparent fa fa-ellipsis-v">
-                            </button>
+                            <div class="card-title-header white-text">Featured Item 1</div>
+                            <div class="card-title-author white-text">Description</div>
                         </div>
                     </div>
                 </div>
                 <div class="card-basic card-ribbon border-2" badge-text="On Sale">
-                    <img src="https://picsum.photos/400/300" class="card-image" alt="Tanjiro Kamado Pic" />
-                    <div class="card-header">
+                    <img src="https://picsum.photos/400/300" class="card-image" alt="card-image" />
+                    <div class="card-header card-pull-text-over-media">
                         <div class="card-title">
-                            <div class="card-title-header">Item</div>
-                            <div class="card-title-author">Description</div>
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                        <div class="card-footer-buttons">
-                            <button class="card-btn btn-link btn-buy">BUY</button>
-                            <button class="card-btn btn-link btn-add-cart">Add to Cart</button>
-                        </div>
-                        <div class="card-footer-icons">
-                            <button class="btn btn-icon btn-transparent fa fa-heart-o ">
-                            </button>
-                            <button class="btn btn-icon btn-transparent fa fa-share-alt ">
-                            </button>
-                            <button class=" btn btn-icon btn-transparent fa fa-ellipsis-v">
-                            </button>
+                            <div class="card-title-header white-text">Featured Item 2</div>
+                            <div class="card-title-author white-text">Description</div>
                         </div>
                     </div>
                 </div>
                 <div class="card-basic card-ribbon border-2" badge-text="On Sale">
-                    <img src="https://picsum.photos/400/300" class="card-image" alt="Tanjiro Kamado Pic" />
-                    <div class="card-header">
+                    <img src="https://picsum.photos/400/300" class="card-image" alt="card-image" />
+                    <div class="card-header card-pull-text-over-media">
                         <div class="card-title">
-                            <div class="card-title-header">Item</div>
-                            <div class="card-title-author">Description</div>
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                        <div class="card-footer-buttons">
-                            <button class="card-btn btn-link btn-buy">BUY</button>
-                            <button class="card-btn btn-link btn-add-cart">Add to Cart</button>
-                        </div>
-                        <div class="card-footer-icons">
-                            <button class="btn btn-icon btn-transparent fa fa-heart-o ">
-                            </button>
-                            <button class="btn btn-icon btn-transparent fa fa-share-alt ">
-                            </button>
-                            <button class=" btn btn-icon btn-transparent fa fa-ellipsis-v">
-                            </button>
+                            <div class="card-title-header white-text">Featured Item 3</div>
+                            <div class="card-title-author white-text">Description</div>
                         </div>
                     </div>
                 </div>
