added login button to landing page

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <div class="nav-item-right">
             <button class="btn btn-transparent">
                 <i class="fa fa-sign-in medium-text violet-text"></i>
+                <a href="#" class="btn btn-link">
+                    <span class="medium-text">Log-<span class="violet-text">in</span></span>
+                </a>
             </button>
             <div class="nav-item nav-cart">
                 <button class="btn btn-transparent">
