--- a/login.html
+++ b/login.html
@@ -55,19 +55,40 @@
             <div class="login-container">
                 <div class="card-login">
                     <span class="login-title large-text">Login</span>
-
                     <div class="login-username">
                         <label for="username">Username
-                        </label> <input type="text" name="username" id="username">
-
+                        </label> <input type="text" placeholder="Enter your username" name="username" id="username">
                     </div>
                     <div class="login-password">
                         <label for="password">Password
                         </label>
-                        <input type="password" name="password" id="password">
-
+                        <input type="password" placeholder="Enter your password" name="password" id="password">
                     </div>
                     <button class="btn btn-lg btn-info"><span class="medium-text"> Login</span>
+                    </button>
+                    <div class="login-sso">
+                        <span class="normal-text semibold-text">Or login using</span>
+                        <div class="login-sso-icons">
+                            <button class="btn btn-lg btn-link"> <i class="fa fa-google"></i></button>
+                            <button class="btn btn-lg  btn-link"> <i class="fa fa-github"></i></button>
+                            <button class="btn btn-lg btn-link"> <i class="fa fa-apple"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="login-container">
+                <div class="card-login">
+                    <span class="login-title large-text">Sign up</span>
+                    <div class="login-username">
+                        <label for="username">Username
+                        </label> <input type="text" placeholder="12 Characters max" name="username" id="username">
+                    </div>
+                    <div class="login-password">
+                        <label for="password">Password
+                        </label>
+                        <input type="password" placeholder="12 Characters max" name="password" id="password">
+                    </div>
+                    <button class="btn btn-lg btn-info"><span class="medium-text">Sign Up</span>
                     </button>
                     <div class="login-sso">
                         <span class="normal-text semibold-text">Or login using</span>
