added badges to wishlist and cart icon

--- a/index.html
+++ b/index.html
@@ -40,11 +40,18 @@
             <button class="btn btn-transparent">
                 <i class="fa fa-sign-in medium-text violet-text"></i>
             </button>
-            <div class="nav-item nav-cart">
-                <button class="btn btn-transparent">
+            <button class="btn btn-transparent">
+                <div class="badge-container">
+                    <i class="fa fa-heart medium-text violet-text"></i>
+                    <span class="badge badge-lg badge-danger"></span>
+                </div>
+            </button>
+            <button class="btn btn-transparent">
+                <div class="badge-container">
                     <i class="fa fa-shopping-cart medium-text violet-text"></i>
-                </button>
-            </div>
+                    <span class="badge badge-lg badge-danger"></span>
+                </div>
+            </button>
         </div>
     </nav>
     <main class="landing-page">
