Added filter by component

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <img src="assets/images/logo.png" alt="brand-logo" class="nav-item nav-brand-logo round-corner-md">
             <div class="nav-item">
                 <h2 class="brand-title regular-text">
-                    <span class="violet-text">Q</span>RTR
+                    <a href="./index.html">
+                        <span class="violet-text">Q</span>RTR
+                    </a>
                 </h2>
             </div>
         </div>
@@ -93,7 +95,7 @@
                 </div>
             </section>
         </div>
-    </main>                             
+    </main>
     <script src="https://responsify-ui.vercel.app/index.js"></script>
     <script src="https://kit.fontawesome.com/829cb68a23.js" crossorigin="anonymous"></script>
     <script src="./index.js"></script>
