--- a/login.html
+++ b/login.html
@@ -33,8 +33,10 @@
 
         <div class="nav-item-center">
             <div class="input-with-status-icon nav-search-bar">
-                <input type="text" class="input border-2" placeholder="Lorem Ipsum">
-                <i class="fa fa-search input-status violet-text"></i>
+                <input type="text" class="input border-2" placeholder="Search to go to Product Listing Page">
+                <a href="./product_page.html">
+                    <i class="fa fa-search input-status violet-text"></i>
+                </a>
             </div>
         </div>
 
