--- a/index.html
+++ b/index.html
@@ -71,31 +71,31 @@
                 <div class="card-basic card-ribbon border-2" badge-text="On Sale">
                     <img src="https://picsum.photos/400/300" class="card-image" alt="card-image" />
                     <div class="card-header card-pull-text-over-media">
-                        <div class="card-title">
-                            <div class="card-title-header white-text">Featured Item 1</div>
-                            <div class="card-title-author white-text">Description</div>
-                        </div>
+                        <div class="card-title card-dark-bg"">
+                            <div class=" card-title-header white-text">Featured Item 1</div>
+                        <div class="card-title-desc white-text">Description</div>
                     </div>
                 </div>
-                <div class="card-basic card-ribbon border-2" badge-text="On Sale">
-                    <img src="https://picsum.photos/400/300" class="card-image" alt="card-image" />
-                    <div class="card-header card-pull-text-over-media">
-                        <div class="card-title">
-                            <div class="card-title-header white-text">Featured Item 2</div>
-                            <div class="card-title-author white-text">Description</div>
-                        </div>
-                    </div>
+        </div>
+        <div class="card-basic card-ribbon border-2" badge-text="On Sale">
+            <img src="https://picsum.photos/400/300" class="card-image" alt="card-image" />
+            <div class="card-header card-pull-text-over-media">
+                <div class="card-title card-dark-bg"">
+                            <div class=" card-title-header white-text">Featured Item 2</div>
+                <div class="card-title-desc white-text">Description</div>
+            </div>
+        </div>
+        </div>
+        <div class="card-basic card-ribbon border-2" badge-text="On Sale">
+            <img src="https://picsum.photos/400/300" class="card-image" alt="card-image" />
+            <div class="card-header card-pull-text-over-media">
+                <div class="card-title card-dark-bg">
+                    <div class="card-title-header white-text">Featured Item 3</div>
+                    <div class="card-title-desc white-text">Description</div>
                 </div>
-                <div class="card-basic card-ribbon border-2" badge-text="On Sale">
-                    <img src="https://picsum.photos/400/300" class="card-image" alt="card-image" />
-                    <div class="card-header card-pull-text-over-media">
-                        <div class="card-title">
-                            <div class="card-title-header white-text">Featured Item 3</div>
-                            <div class="card-title-author white-text">Description</div>
-                        </div>
-                    </div>
-                </div>
-            </section>
+            </div>
+        </div>
+        </section>
         </div>
     </main>
     <script src="https://kit.fontawesome.com/829cb68a23.js" crossorigin="anonymous"></script>
