generic naming for side nav and main section

--- a/product_page.html
+++ b/product_page.html
@@ -65,7 +65,7 @@
       </div>
     </nav>
     <main class="product-page width-100">
-      <section class="filter-listing-container">
+      <section class="side-nav filter-listing-container">
         <div class="filter-header">
           <span class="filter-title medium-text">Filter</span>
           <button class="btn btn-md btn-transparent">Clear</button>
@@ -127,7 +127,7 @@
           </div>
         </div>
       </section>
-      <section class="product-listing-container">
+      <section class="main-section product-listing-container">
         <div
           class="card-basic card-ribbon card-ribbon-warning card-product border-2"
           badge-text="Only 2 left"
