Added home button

--- a/product_page.html
+++ b/product_page.html
@@ -66,6 +66,9 @@
     </nav>
     <main class="product-page width-100">
       <section class="side-nav filter-listing-container">
+        <a href="./index.html" class="btn btn-info"
+          ><i class="fa fa-home"></i>Home</a
+        >
         <div class="filter-header">
           <span class="filter-title medium-text">Filter</span>
           <button class="btn btn-md btn-transparent">Clear</button>
