fixed side nav for all pages

--- a/index.html
+++ b/index.html
@@ -64,7 +64,34 @@
         </div>
       </div>
     </nav>
-    <main class="landing-page">
+    <aside class="side-nav page-side-nav">
+      <div class="input-with-status-icon nav-search-bar">
+        <input
+          type="text"
+          class="input border-2"
+          placeholder="Search to go to Product Listing Page"
+        />
+        <a href="./product_page.html">
+          <i class="fa fa-search input-status violet-text"></i>
+        </a>
+      </div>
+      <button class="btn btn-transparent">
+        <i class="fa fa-sign-in medium-text violet-text"></i>
+        <a href="../login.html" class="btn btn-link">
+          <span class="medium-text"
+            >Log-<span class="violet-text">in</span></span
+          >
+        </a>
+      </button>
+      <div class="nav-item nav-cart">
+        <button class="btn btn-transparent">
+          <i class="fa fa-shopping-cart medium-text violet-text"> </i>
+          <span class="medium-text"
+          >Go to <span class="violet-text">Cart</span></span
+        >
+        </button>
+    </aside>
+    <main class="main-section landing-page">
       <div class="page-width-80 flex-column-center width-100">
         <section class="cta flex-column-center width-100">
           <div class="cta-image flex-column-center">
