--- a/login.html
+++ b/login.html
@@ -54,6 +54,38 @@
             </div>
         </div>
     </nav>
+    <aside class="side-nav page-side-nav">
+        <div class="input-with-status-icon nav-search-bar">
+          <input
+            type="text"
+            class="input border-2"
+            placeholder="Search to go to Product Listing Page"
+          />
+          <a href="./product_page.html">
+            <i class="fa fa-search input-status violet-text"></i>
+          </a>
+        </div>
+        <button class="btn btn-transparent">
+          <i class="fa fa-sign-in medium-text violet-text"></i>
+          <a href="../login.html" class="btn btn-link">
+            <span class="medium-text"
+              >Log-<span class="violet-text">in</span></span
+            >
+          </a>
+        </button>
+          <button class="btn btn-transparent">
+            <i class="fa fa-shopping-cart medium-text violet-text"> </i>
+            <span class="medium-text"
+            >Go to <span class="violet-text">Cart</span></span
+          >
+          </button>
+          <button class="btn btn-transparent">
+            <i class="fa fa-home medium-text violet-text"></i>
+            <a href="./index.html" class="btn btn-link">
+             <span class="medium-text">Home</span>
+            </a>
+          </button>
+      </aside>
     <main class="login-page">
         <div class="login-container">
             <div class="card-login">
